# bank

./: Cargo.toml  README.md
src/: client_id.rs  client_info.rs  input_file_reader.rs  main.rs  output_record.rs  output_writer.rs  service.rs  transaction_id.rs  transaction_info.rs
tests/assets/: transactions.csv
